--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-darkreader": "^1.5.6",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-random-reveal": "^2.0.0",
